edit line 8 : ’http’ -> ‘https’

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8"/>
         <title>HyunArmSong's Stud</title>
         
-        <script src="http://code.angularjs.org/angular-1.0.0rc10.min.js"></script>
+        <script src="https://code.angularjs.org/angular-1.0.0rc10.min.js"></script>
     </head>
     
     <body ng-app="myApp">
