--- a/index_new.html
+++ b/index_new.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title>Rumination's Homepage</title>
         
         <link rel="stylesheet" type="text/css" href="./css/reset.css"/>
@@ -23,6 +24,6 @@
 
 		<content>
             
-		</content>
+		</conhjent>
 	</body>
 </html>
