--- a/index_new.html
+++ b/index_new.html
@@ -27,7 +27,23 @@
 
 		<content>
 			<div id='todoDisplay'>
-				
+				<dl>
+					<dt>
+						To Do
+						<button class='btn_add_todo'>+</button>
+					</dt>
+					<dd class='list_block'>
+					</dd>
+				</dl>
+
+				<dl>
+					<dt>
+						Finished
+					</dt>
+					<dd class='list_block'>
+					</dd>
+				</dl>
+
 			</div>
 		</conhjent>
 	</body>
