--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<dl>
 					<dt>
 						To Do
-						<button class='btn_add_todo'></button>
+						<button class='btn_add_todo'>+</button>
 					</dt>
 					<dd class='list_block'>
 					</dd>
