--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 			</div>
 
 			<div id="headerRight">
+				<dl>
+					<dd>testTodo</dd>
+					<dd>testTodo2</dd>
+				</dl>
 			</div>
 		</header>
 
