--- a/index.html
+++ b/index.html
@@ -22,10 +22,6 @@
 			</div>
 
 			<div id="headerRight">
-				<dl>
-					<dd>testTodo</dd>
-					<dd>testTodo2</dd>
-				</dl>
 			</div>
 		</header>
 
@@ -37,6 +33,10 @@
 						<button class='btn_add_todo'>+</button>
 					</dt>
 					<dd class='list_block'>
+						<dl>
+							<dd>test</dd>
+							<dd>test2</dd>
+						</dl>
 					</dd>
 				</dl>
 
@@ -47,7 +47,6 @@
 					<dd class='list_block'>
 					</dd>
 				</dl>
-
 			</div>
 		</conhjent>
 	</body>
