이제야 제대로된 css

--- a/index.html
+++ b/index.html
@@ -27,19 +27,61 @@
 
 		<content>
 			<div id='todoDisplay'>
+                <div>
 				<dl>
 					<dt>
 						To Do
 						<button class='btn_add_todo'>+</button>
 					</dt>
 					<dd class='list_block'>
-						<dl>
-							<dd>test</dd>
-							<dd>test2</dd>
-						</dl>
+						<ul>
+							<li class="todo_list">
+                                <dl>
+                                    <dt>test</dt>
+                                    <dd>2017.03.05 | 10:47am</dd>
+                                </dl>
+                            </li>
+                            <li class="todo_list">
+                                <dl>
+                                    <dt>test</dt>
+                                    <dd>2017.03.05 | 10:47am</dd>
+                                </dl>
+                            </li>
+                            <li class="todo_list">
+                                <dl>
+                                    <dt>test</dt>
+                                    <dd>2017.03.05 | 10:47am</dd>
+                                </dl>
+                            </li>
+                            <li class="todo_list">
+                                <dl>
+                                    <dt>test</dt>
+                                    <dd>2017.03.05 | 10:47am</dd>
+                                </dl>
+                            </li>
+                            <li class="todo_list">
+                                <dl>
+                                    <dt>test</dt>
+                                    <dd>2017.03.05 | 10:47am</dd>
+                                </dl>
+                            </li>
+                            <li class="todo_list">
+                                <dl>
+                                    <dt>test</dt>
+                                    <dd>2017.03.05 | 10:47am</dd>
+                                </dl>
+                            </li>
+                            <li class="todo_list">
+                                <dl>
+                                    <dt>test</dt>
+                                    <dd>2017.03.05 | 10:47am</dd>
+                                </dl>
+                            </li>
+						</ul>
 					</dd>
 				</dl>
-
+                </div>
+                <div>
 				<dl>
 					<dt>
 						Finished
@@ -47,8 +89,9 @@
 					<dd class='list_block'>
 					</dd>
 				</dl>
+                </div>
 			</div>
-		</conhjent>
+		</contnet>
 	</body>
 
 	<script>
