--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <div class="list_board">
                             <div class="list_block">
                                 <div class="list">
-                                    <div>To Do</div>
+                                    <div class="list_subject">To Do</div>
                                     <div class="list_content">
                                         <dl>
                                             <dt>test</dt>
