add list / edit css

--- a/index.html
+++ b/index.html
@@ -170,6 +170,13 @@
                             
                             <div class="list_block">
                                 <div class="list">
+									<div class="list_subject">Finished</div>
+                                    <div class="list_content">
+                                        <dl>
+                                            <dt>test</dt>
+                                            <dd>2017.03.05 | 11:17am</dd>
+                                        </dl>
+									</div>    
                                 </div>
                             </div>
                         </div>
