--- a/index.html
+++ b/index.html
@@ -1,8 +1,46 @@
-<html>
+<!DOCTYPE html>
+<html lang="kr">
 <head>
-	<title>HyunArmSong.github.io</title>
+    <meta charset="UTF-8">
+    <title>MHW 키린 서클 무기 강화</title>
+
+    <link rel="stylesheet" href="./css/mhw_kirin.css"/>
 </head>
 <body>
-	Hello~
+<h1>Monster Hunter:World 키린 써클</h1>
+<h2>무기 강좌 페이지</h2>
+<div id="weapon">
+    <section>
+        <h2 class="chargeblade">
+            <b>차지액스</b>
+        </h2>
+        <div class="weapon_info_block">
+            <h3 class="block_title">무기 소개</h3>
+            <div class="content_box weapon_info">
+                <img src="http://game.capcom.com/manual/MHW_PC/img/page/81_11_1.jpg">
+                차지액스는 빠르게 휘두를 수 있는 검과 위력이 높은 도끼, 2가지 모드를 전환할 수 있는 무기입니다. 병에 모은 에너지를 소비하여 화력을 높일 수 있습니다.
+            </div>
+        </div>
+        <div class="weapon_ex_block">
+            <h3 class="block_title">무기 강의</h3>
+            <div class="content_box weapon_ex">
+                <ol class="list_ol">
+                    <li>
+                        커스텀
+                    </li>
+                    <li>
+                        커멘드
+                    </li>
+                    <li>
+                        운영법
+                    </li>
+                    <li>
+                        운영법
+                    </li>
+                </ol>
+            </div>
+        </div>
+    </section>
+</div>
 </body>
 </html>
