--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="kr">
 <head>
     <meta charset="UTF-8">
-    <title>MHW 키린 서클 무기 강화</title>
+    <title>MHW 키린 서클 무기 강좌</title>
 
     <link rel="stylesheet" href="./css/mhw_kirin.css"/>
 </head>
