--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="kr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0"/>
+
     <title>MHW 키린 서클 무기 강좌</title>
 
     <link rel="stylesheet" href="./css/mhw_kirin.css"/>
