--- a/index.html
+++ b/index.html
@@ -29,6 +29,31 @@
                 <ol class="list_ol">
                     <li>
                         커스텀
+                        <ul>
+                            <li>
+                                필수스킬 <p class="sub_info">(공: 공통, 유: 유탄병, 강: 강속성병)</p>
+                                <ul>
+                                    <li>
+                                        집중 3<small class="sub_info">(공)</small>
+                                        :
+                                        병의 충전량이 늘어나 병을 빨리 모을 수 있습니다.
+                                    </li>
+                                    <li>
+                                        약점특효 3<small class="sub_info">(공)</small>
+                                        :
+                                        회심 수급을 위해 이용합니다.
+                                    </li>
+                                    <li>
+                                        포술 3<small class="sub_info">(유)</small>
+                                        :
+                                        유탄병의 데미지를 향상시킵니다.
+                                    </li>
+                                    <li>
+
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
                     </li>
                     <li>
                         커멘드
