--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <title>MHW 키린 서클 무기 강좌</title>
 
     <link rel="stylesheet" href="./css/mhw_kirin.css"/>
+    <link rel="stylesheet" href="./css/weapons.css"/>
+    <link rel="stylesheet" href="./css/commend.css"/>
 </head>
 <body>
 <h1>Monster Hunter:World 키린 써클</h1>
 <h2>무기 강좌 페이지</h2>
 <div id="weapon">
     <section>
-        <h2 class="chargeblade">
-            <b>차지액스</b>
+        <h2>
+            <b class="weapon_icon chargeblade">차지액스</b>
         </h2>
         <div class="weapon_info_block">
             <h3 class="block_title">무기 소개</h3>
@@ -34,32 +36,119 @@
                                 필수스킬 <p class="sub_info">(공: 공통, 유: 유탄병, 강: 강속성병)</p>
                                 <ul>
                                     <li>
-                                        집중 3<small class="sub_info">(공)</small>
+                                        집중 3!<small class="sub_info">(공)</small>
                                         :
                                         병의 충전량이 늘어나 병을 빨리 모을 수 있습니다.
                                     </li>
                                     <li>
-                                        약점특효 3<small class="sub_info">(공)</small>
+                                        약점특효<small class="sub_info">(공)</small>
                                         :
                                         회심 수급을 위해 이용합니다.
                                     </li>
                                     <li>
-                                        포술 3<small class="sub_info">(유)</small>
+                                        포술 3!<small class="sub_info">(유)</small>
                                         :
                                         유탄병의 데미지를 향상시킵니다.
                                     </li>
                                     <li>
+                                        가드성능 1!<small class="sub_info">(공)</small>
+                                        :
+                                        방패강화효과 + 가드포인트 + 가강1로 가드강화 5의 효과를 볼수 있으므로 1은 필수로 챙겨야 한다 생각합니다.(개인적인 의견)
+                                    </li>
+                                </ul>
+                            </li>
 
+                            <li>
+                                선택스킬 (지극히 개인적인 입장에서 추천)
+                                <ul>
+                                    <li>
+                                        장인
+                                        :
+                                        예리도로 뽑는 데미지보다 초고출, 고출에 의한 데미지가 높아 에리관리를 안하게 됨에 따라 예리를 올려주는게 좋습니다.<br>
+                                        하다보면 초록예리도를 보는게 다반사...
+                                    </li>
+                                    <li>
+                                        혼신
+                                        :
+                                        검, 도끼딜을 챙기겠다하면 챙겨주시면 좋습니다.
+                                    </li>
+                                    <li>
+                                        가드강화
+                                        :
+                                        가드불가 기술까지 뱅패로 막겠다!! 하면 추천합니다.(회피를 안해도 되서 생각보다 괜찮네요)
+                                    </li>
+                                    <li>
+                                        회피거리 증가
+                                        :
+                                        차지액스는 공격후 좌우 구르기가 스탭이기때문에 회피거리를 챙기면 은근 회피률이 많이 올라갑니다.
                                     </li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        커멘드
+                        기본 커멘드
+                        <ul>
+                            <li>
+                                검모드
+                                <ul>
+                                    <li class="comment_box">
+                                        기본 3콤보 :
+                                        <p class="mouse_l"></p>
+                                        ->
+                                        <p class="mouse_l"></p>
+                                        ->
+                                        <p class="mouse_l"></p> 회전베기
+                                    </li>
+                                    <li class="comment_box">
+                                        <p class="mouse_l"></p>
+                                        <p class="mouse_r"></p>
+                                        <p class="key_ctrl"></p>
+                                        <p class="key_wasd"></p>
+                                        <p class="key_space"></p>
+                                    </li>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li>
+                                도끼모드
+                                <ul>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                            </li>
+                        </ul>
                     </li>
                     <li>
-                        운영법
+                        운영에 필요한 커멘드
+                        <ul>
+
+                            <li>
+                                병충전 / 방패강화 / 검강화
+                                <ul>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li>
+                                초고출력/고출력
+                                <ul>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li>
+                                가드포인트
+                                <ul>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                            </li>
+                        </ul>
                     </li>
                     <li>
                         운영법
