--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="weapon_info_block">
             <h3 class="block_title">무기 소개</h3>
             <div class="content_box weapon_info">
-                <img src="http://game.capcom.com/manual/MHW_PC/img/page/81_11_1.jpg">
+                <img src="//game.capcom.com/manual/MHW_PC/img/page/81_11_1.jpg">
                 차지액스는 빠르게 휘두를 수 있는 검과 위력이 높은 도끼, 2가지 모드를 전환할 수 있는 무기입니다. 병에 모은 에너지를 소비하여 화력을 높일 수 있습니다.
             </div>
         </div>
