--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                                     <li class="comment_box">
                                         <p class="mouse_l"></p>
                                         <p class="mouse_r"></p>
+                                        <p class="mouse_lr"></p>
                                         <p class="key_wasd"></p>
                                         <p class="key_w"></p>
                                         <p class="key_a"></p>
