--- a/index.html
+++ b/index.html
@@ -11,13 +11,34 @@
     <link rel="stylesheet" href="./css/commend.css"/>
 
     <script src="//code.jquery.com/jquery-latest.min.js"></script>
-    <script src="./JS/creatList.js"></script>
+    <script src="./JS/mhw_kirin.js"></script>
 </head>
 <body>
 <h1>Monster Hunter:World 키린 써클</h1>
 <h2>무기 강좌 페이지</h2>
+
+<div id="category">
+    <h2>Category</h2>
+    <ul>
+        <li class="category_btn" data-name="chargeBlade">차지액스</li>
+        <li class="category_btn" data-name="greatSword">대검</li>
+        <li class="category_btn" data-name="longSword">태도</li>
+        <li class="category_btn" data-name="swordShield">한손검</li>
+        <li class="category_btn" data-name="dualBlades">쌍검</li>
+        <li class="category_btn" data-name="hammer">해머</li>
+        <li class="category_btn" data-name="huntingHorn">수렵피리</li>
+        <li class="category_btn" data-name="lance">랜스</li>
+        <li class="category_btn" data-name="gunlance">건랜스</li>
+        <li class="category_btn" data-name="switchAxe">슬래시액스</li>
+        <li class="category_btn" data-name="insectGlaive">조충곤</li>
+        <li class="category_btn" data-name="lightBowgun">라이트보우건</li>
+        <li class="category_btn" data-name="heavyBowgun">헤비보우건</li>
+        <li class="category_btn" data-name="bow">활</li>
+    </ul>
+</div>
+
 <div id="weapon">
-    <section>
+    <section id="chargeBlade">
         <h2>
             <b class="weapon_icon chargeBlade">차지액스</b>
         </h2>
@@ -204,6 +225,110 @@
                     </li>
                 </ol>
             </div>
+        </div>
+    </section>
+    <section id="greatSword">
+        <h2>
+            <b class="weapon_icon greatSword">대검</b>
+        </h2>
+        <div class="weapon_info_block">
+            <h2> 중비중.....</h2>
+        </div>
+    </section>
+    <section id="longSword">
+        <h2>
+            <b class="weapon_icon longSword">태도</b>
+        </h2>
+        <div class="weapon_info_block">
+            <h2> 중비중.....</h2>
+        </div>
+    </section>
+    <section id="swordShield">
+        <h2>
+            <b class="weapon_icon swordShield">한손검</b>
+        </h2>
+        <div class="weapon_info_block">
+            <h2> 중비중.....</h2>
+        </div>
+    </section>
+    <section id="dualBlades">
+        <h2>
+            <b class="weapon_icon dualBlades">쌍검</b>
+        </h2>
+        <div class="weapon_info_block">
+            <h2> 중비중.....</h2>
+        </div>
+    </section>
+    <section id="hammer">
+        <h2>
+            <b class="weapon_icon hammer">해머</b>
+        </h2>
+        <div class="weapon_info_block">
+            <h2> 중비중.....</h2>
+        </div>
+    </section>
+    <section id="huntingHorn">
+        <h2>
+            <b class="weapon_icon huntingHorn">수렵피리</b>
+        </h2>
+        <div class="weapon_info_block">
+            <h2> 중비중.....</h2>
+        </div>
+    </section>
+    <section id="lance">
+        <h2>
+            <b class="weapon_icon lance">랜스</b>
+        </h2>
+        <div class="weapon_info_block">
+            <h2> 중비중.....</h2>
+        </div>
+    </section>
+    <section id="gunlance">
+        <h2>
+            <b class="weapon_icon gunlance">건랜스</b>
+        </h2>
+        <div class="weapon_info_block">
+            <h2> 중비중.....</h2>
+        </div>
+    </section>
+    <section id="switchAxe">
+        <h2>
+            <b class="weapon_icon switchAxe">슬래시액스</b>
+        </h2>
+        <div class="weapon_info_block">
+            <h2> 중비중.....</h2>
+        </div>
+    </section>
+    <section id="insectGlaive">
+        <h2>
+            <b class="weapon_icon insectGlaive">조충곤</b>
+        </h2>
+        <div class="weapon_info_block">
+            <h2> 중비중.....</h2>
+        </div>
+    </section>
+    <section id="lightBowgun">
+        <h2>
+            <b class="weapon_icon lightBowgun">라이트보우건</b>
+        </h2>
+        <div class="weapon_info_block">
+            <h2> 중비중.....</h2>
+        </div>
+    </section>
+    <section id="heavyBowgun">
+        <h2>
+            <b class="weapon_icon heavyBowgun">헤비보우건</b>
+        </h2>
+        <div class="weapon_info_block">
+            <h2> 중비중.....</h2>
+        </div>
+    </section>
+    <section id="bow">
+        <h2>
+            <b class="weapon_icon bow">활</b>
+        </h2>
+        <div class="weapon_info_block">
+            <h2> 중비중.....</h2>
         </div>
     </section>
 </div>
