--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>MHW 키린 서클 무기 강좌</title>
 
     <link rel="stylesheet" href="./css/mhw_kirin.css"/>
+    <link rel="stylesheet" href="./css/mhw_kirin_midia.css"/>
     <link rel="stylesheet" href="./css/weapons.css"/>
     <link rel="stylesheet" href="./css/commend.css"/>
 
